<resources>
    <string name="app_name">Yestech Premium</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_announcement">Announcement</string>
    <string name="title_video_lib">Video Library</string>
    <string name="title_educator_list">Educator List</string>
    <string name="title_student_list">Student List</string>

    <string name="title_user_information">User Information</string>
    <string name="title_user_background">User Background</string>
    <string name="title_social_account">Social Account</string>
    <string name="title_my_subject">My Subjects</string>
    <string name="title_my_files">My Files</string>

    <string name="title_subject_details">Subject Details</string>
    <string name="title_students">Students</string>
    <string name="title_attendance">Attendance</string>
    <string name="title_topics">Topics</string>
    <string name="title_quizzes">Quizzes</string>
    <string name="title_assignment">Assignment</string>
    <string name="title_assessment">Assessment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
