<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_subject_details"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_subject_details" />

        <item
            android:id="@+id/navigation_students"
            android:icon="@drawable/ic_inbox_black_24dp"
            android:title="@string/title_students" />

        <item
            android:id="@+id/navigation_attendance"
            android:icon="@drawable/ic_video_black_24dp"
            android:title="@string/title_attendance" />

        <item
            android:id="@+id/navigation_topics"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_topics" />

        <item
            android:id="@+id/navigation_quizzes"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_quizzes" />
        <item
            android:id="@+id/navigation_assignment"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_assignment" />

        <item
            android:id="@+id/navigation_assessment"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_assessment" />
    </group>
</menu>
