<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_announcement"
        android:icon="@drawable/ic_inbox_black_24dp"
        android:title="@string/title_announcement" />

    <item
        android:id="@+id/navigation_my_subjects"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_my_subject" />

    <item
        android:id="@+id/navigation_my_files"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_my_files" />

    <item
        android:id="@+id/navigation_video_lib"
        android:icon="@drawable/ic_video_black_24dp"
        android:title="@string/title_video_lib" />

</menu>
