<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/manage_subject_navigation"
    app:startDestination="@+id/navigation_subject_details">

    <fragment
        android:id="@+id/navigation_subject_details"
        android:name="com.theyestech.yestechpremium.fragments.SubjectDetailsFragment"
        android:label="@string/title_subject_details"
        tools:layout="@layout/fragment_subject_details" />

    <fragment
        android:id="@+id/navigation_students"
        android:name="com.theyestech.yestechpremium.fragments.SubjectStudentsFragment"
        android:label="@string/title_students"
        tools:layout="@layout/fragment_subject_students" />

    <fragment
        android:id="@+id/navigation_attendance"
        android:name="com.theyestech.yestechpremium.fragments.SubjectAttendanceFragment"
        android:label="@string/title_attendance"
        tools:layout="@layout/fragment_subject_attendance" />
    <fragment
        android:id="@+id/navigation_topics"
        android:name="com.theyestech.yestechpremium.fragments.SubjectTopicsFragment"
        android:label="@string/title_topics"
        tools:layout="@layout/fragment_subject_topics" />

    <fragment
        android:id="@+id/navigation_quizzes"
        android:name="com.theyestech.yestechpremium.fragments.SubjectQuizzesFragment"
        android:label="@string/title_quizzes"
        tools:layout="@layout/fragment_subject_quizzes" />

    <fragment
        android:id="@+id/navigation_assignment"
        android:name="com.theyestech.yestechpremium.fragments.SubjectAssignmentFragment"
        android:label="@string/title_assignment"
        tools:layout="@layout/fragment_subject_assignment" />

    <fragment
        android:id="@+id/navigation_assessment"
        android:name="com.theyestech.yestechpremium.fragments.SubjectAssessmentFragment"
        android:label="@string/title_assessment"
        tools:layout="@layout/fragment_subject_assessment" />
</navigation>
